IDE review of package org.apache.slider packages
git-svn-id: https://svn.apache.org/repos/asf/incubator/slider/trunk@1595998 13f79535-47bb-0310-9956-ffa450edef68